--- a/NavBar/Styles.css
+++ b/NavBar/Styles.css
@@ -1,4 +1,53 @@
-*
-{
-    margin-left: 0cm;
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+body {
+  padding-top: 20px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+li,
+a,
+button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 200;
+  font-size: 15px;
+}
+
+button {
+  padding: 9px 25px;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  background-color: whitesmoke;
+ 
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10%;
+  background-color: #b2d3c2;
+  border-radius: 15px;
+}
+
+.logo {
+  cursor: pointer;
+  height: 100px;
+  border-radius: 100%;
+  margin-left: 15px;
+}
+
+.NavLinks {
+  list-style: none;
+}
+
+.NavLinks li {
+  display: inline-block;
+  padding: 0px 18px;
+  cursor: pointer;
 }
