--- a/NavBar/Styles.css
+++ b/NavBar/Styles.css
@@ -3,10 +3,13 @@
   margin: 0;
 }
 
+/* Global */
+
 body {
   padding-top: 20px;
   padding-right: 15px;
   padding-left: 15px;
+  background-color: rgb(236, 231, 222);
 }
 
 li,
@@ -15,6 +18,23 @@ button {
   font-family: "Montserrat", sans-serif;
   font-weight: 200;
   font-size: 15px;
+  border-radius: 50px;
+}
+
+button:hover {
+  text-decoration: underline;
+  transition: 0.5s;
+
+  /* background-color: rgba(147, 197, 114, 0.8);
+  transition: 0.5s; */
+}
+
+li:hover {
+  text-decoration: underline;
+  transition: 0.5s;
+
+  /* background-color: rgba(147, 197, 114, 0.8);
+  transition: 0.5s; */
 }
 
 button {
@@ -30,9 +50,59 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 10px 10%;
-  background-color: #b2d3c2;
+  background-color: #b2d3bf;
   border-radius: 15px;
 }
+
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 45px;
+  color: white;
+  margin-bottom: 25px;
+  text-align: center;
+  display: block;
+}
+
+p {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 17px;
+  text-align: center;
+  margin-top: 5%;
+  margin-bottom: 12%;
+}
+
+section {
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10%;
+  background-color: white;
+  border-radius: 15px;
+  margin: 5% 5% 5% 5%;
+}
+
+h2 {
+  font-size: 35px;
+}
+
+span {
+  font-size: 17px;
+  text-align: center;
+}
+
+/* Class */
+
+/* .backgroundimg {  
+background-image: url(./img/background.jpeg);
+filter: blur(8px);
+-webkit-filter: blur(8px);
+height: 100%; 
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+} */
 
 .logo {
   cursor: pointer;
@@ -49,4 +119,37 @@ header {
   display: inline-block;
   padding: 0px 18px;
   cursor: pointer;
+}
+
+.HeroConteiner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.more {
+  display: flex;
+  justify-content: center;
+}
+
+/* Id */
+
+#hero {
+  border-radius: 10%;
+  margin: 5% 5% 5% 5%;
+  padding: 10%;
+  background-image: url(./img/heroback.jpeg);
+  box-shadow: 0px 0px 30px 0px #226a45;
+  background-size: cover;
+  background-position: bottom center;
+  display: flex;
+  background-attachment: fixed;
+}
+
+#identity {
+  border-radius: 10%;
+  margin: 5% 5% 5% 5%;
+  padding: 10%;
+  display: flex;
+  background-image: url(./img/lawnmachine.jpeg);
 }
