--- a/NavBar/Styles.css
+++ b/NavBar/Styles.css
@@ -1,11 +1,295 @@
 * {
-  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
+
+/* :root {
+
+} */
 
 /* Global */
 
 body {
+  font-family: "Montserrat", sans-serif;
+}
+
+header {
+  height: 50vh;
+  width: 100vw;
+  background-image: url(img/background.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+
+h1 {
+  margin-bottom: 2rem;
+}
+
+p {
+  margin: 2rem;
+}
+
+main {
+  background-color: rgba(171, 172, 138, 0.139);
+  margin: 5% 5% 5% 5%;
+  padding: 25px;
+  border-color: rgba(0, 0, 0, 0.338);
+  border-radius: 5%;
+  box-shadow: 3px 12px 16px rgba(0, 0, 0, 0.338);
+  box-sizing: border-box;
+}
+
+.navbar {
+  position: absolute;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.navbar a {
+  color: black;
+}
+
+.logo {
+  cursor: pointer;
+  border-radius: 100%;
+  height: 6rem;
+  margin-left: 1rem;
+}
+
+.navbar .navlink ul {
+  display: flex;
+  align-items: center;
+}
+
+li:hover {
+  text-decoration: underline;
+  transition: 0.5s;
+}
+
+.navbar .navlink ul li {
+  margin: 0 1.6rem;
+}
+
+.navbar .hmenu {
+  display: none;
+  position: absolute;
+  top: 3rem;
+  right: 3rem;
+  width: 3rem;
+}
+
+@media screen and (max-width: 900px) {
+  .logo {
+    display: none;
+  }
+  .navbar {
+    padding: 0;
+  }
+
+  .navbar .hmenu {
+    display: block;
+  }
+  .navlink {
+    top: 0;
+    left: 0;
+    display: absolute;
+    background-color: rgba(0, 0, 0, 0.234);
+    backdrop-filter: blur(8px);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -100%;
+  }
+  .navlink .mobile-menu {
+    margin-left: 0;
+  }
+  .navlink ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .navbar .navlink ul li {
+    margin: 1.5rem;
+    font-size: 1rem;
+  }
+}
+
+#hero {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  border-color: rgba(0, 0, 0, 0.338);
+}
+
+.mision {
+  font-size: 1.35rem;
+  width: 30rem;
+  height: 20rem;
+  text-align: center;
+  margin-top: 2rem;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.misionimgen img {
+  background-image: url(img/heroback.jpeg);
+  box-sizing: border-box;
+  width: 35rem;
+  height: 20rem;
+  border-radius: 5%;
+  margin-top: 6rem;
+}
+
+.title {
+  text-align: center;
+  font-size: 2.5rem;
+  margin-top: 5rem;
+  font-weight: 100;
+}
+.container {
+  width: 55rem;
+  height: 27rem;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  margin: auto;
+  box-sizing: border-box;
+}
+
+.container .card {
+  width: 55rem;
+  height: 27rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.338);
+  overflow: hidden;
+  margin: 1.25rem;
+  text-align: center;
+  transition: all 0.25s;
+}
+
+.container .card:hover {
+  transform: translateY(-1rem);
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.338);
+}
+
+.container .card img {
+  width: 20.7rem;
+  height: 13.75rem;
+}
+
+.contactsection {
+  max-width: 58rem;
+  margin-top: 6rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.5em;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.logo {
+  text-align: center;
+  font-size: 3.5em;
+}
+
+.contact > * {
+  padding: 1em;
+}
+
+ h3{
+   text-align: center;
+   font-size: 2.2rem;
+ }
+
+.contactform {
+  background: white;
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.338);
+}
+
+.contactform form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.contactform form .block {
+  grid-column: 1 / 3;
+}
+.contactform form {
+  margin: 0;
+  padding: 1em;
+}
+
+.contactform form button,
+.contactform form input,
+.contactform form textarea {
+  width: 80%;
+  padding: 1.2rem;
+  border: none;
+  background: none;
+  outline: 0;
+  color: rgb(0, 0, 0);
+  border-bottom: 1px solid black;
+}
+
+.contactform form button {
+  background: rgba(147, 197, 114, 0.8);
+  border: 0;
+  text-transform: uppercase;
+  padding: 1em;
+}
+
+.contactform form button:hover,
+.contactform form button:focus {
+  background: rgba(91, 128, 66, 0.8);
+  color: white;
+  transition: 1s ease-out ;
+  outline: 0;
+}
+
+.contactinfo  {
+  background: rgba(255, 255, 255, 0.229);
+}
+
+.contactinfo h5,
+.contactinfo ul,
+.contactinfo p {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+.contactinfo ul {
+  list-style: none;
+  padding: 0;
+}
+
+.contactinfo ul li {
+  padding: 0.5rem;
+}
+
+button {
+  margin-left: 5rem;
+}
+
+footer {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.338);
+}
+
+/* body {
   padding-top: 20px;
   padding-right: 15px;
   padding-left: 15px;
@@ -26,18 +310,19 @@ button:hover {
   transition: 0.5s;
 
   /* background-color: rgba(147, 197, 114, 0.8);
-  transition: 0.5s; */
-}
+  transition: 0.5s; }
+  
+  */
 
+/* 
 li:hover {
   text-decoration: underline;
   transition: 0.5s;
 
   /* background-color: rgba(147, 197, 114, 0.8);
-  transition: 0.5s; */
-}
+  transition: 0.5s; }*/
 
-button {
+/* button {
   padding: 9px 25px;
   border: none;
   border-radius: 50px;
@@ -90,7 +375,7 @@ h2 {
 span {
   font-size: 17px;
   text-align: center;
-}
+} */
 
 /* Class */
 
@@ -104,7 +389,7 @@ background-repeat: no-repeat;
 background-size: cover;
 } */
 
-.logo {
+/* .logo {
   cursor: pointer;
   height: 100px;
   border-radius: 100%;
@@ -113,9 +398,9 @@ background-size: cover;
 
 .NavLinks {
   list-style: none;
-}
+} */
 
-.NavLinks li {
+/* .NavLinks li {
   display: inline-block;
   padding: 0px 18px;
   cursor: pointer;
@@ -134,7 +419,7 @@ background-size: cover;
 
 /* Id */
 
-#hero {
+/* #hero {
   border-radius: 10%;
   margin: 5% 5% 5% 5%;
   padding: 10%;
@@ -151,5 +436,4 @@ background-size: cover;
   margin: 5% 5% 5% 5%;
   padding: 10%;
   display: flex;
-  background-image: url(./img/lawnmachine.jpeg);
-}
+  background-image: url(./img/lawnmachine.jpeg);} */
